refactor: modernize .toList() instead Collector.toList()